--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         </nav>
       </div>
     </header>
+
+    <section id="hero">
+      <div class="container py-xl">
+        <img src="assets/music-bars.svg" alt="Music Bars"/>
+        <h1>Quem canta seus males espanta</h1>
+        <p>Cantar nunca foi tão fácil</p>
+
+        <div class="buttons flex items-center gap-1">
+          <a href="pricing" aria-label="Ver Planos" class="btn btn-md"></a>
+          <a href="download" class="btn btn-md">Baixar Agora</a>
+        </div>
+      </div>
+    </section>
     
     
     <!--<div class="flex gap-1">
