--- a/index.html
+++ b/index.html
@@ -172,38 +172,36 @@
         </div>
       </div>
     </section>
+
+    <section id="download">
+      <div class="container py-xl">
+        <div class="card px-lg items-center">
+          <div>
+            <header>
+              <strong>download</strong>
+              <h2>Bora cantar?</h2>
+            </header>
+            <p>Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. 
+               Baixe o Zingen agora e transforme suas performances em experiências inesquecíveis!</p>
+          </div>
+
+          <img src="assets/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg1.png" alt="Rapaz ouvindo música com fones de ouvido"/>
+
+          <div class="buttons flex gap-1">
+            <a href="#">
+              <img src="assets/button-apple-store.svg" alt="Baixar na Apple Store"/>
+            </a>
+
+            <a href="#">
+              <img src="assets/button-play-store.svg" alt="Baixar na Google Play"/>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
     
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!--<div class="flex gap-1">
-      <a href="#" class="social" aria-label="tiktok"></a>
-      <a href="#" class="social" aria-label="instagram"></a>
-      <a href="#" class="social" aria-label="twitter"></a>
-      <a href="#" class="social" aria-label="discord"></a>
-    </div>
-
-    <div class="flex gap-1">
-      <a href="#" class="btn btn-sm">Label</a>
-      <a href="#" class="btn btn-md">Label</a>
-      <button href="#" class="btn btn-lg">Label</button>
-    </div>
-
-    <div class="flex gap-1">
-      <a aria-label="Label" href="#" class="btn btn-sm"></a>
-      <a aria-label="Label" href="#" class="btn btn-md"></a>
-      <button aria-label="Label" href="#" class="btn btn-lg"></button>
-    </div> -->
   </body>
 </html>
